récap page added

--- a/templates/main/admin.html.twig
+++ b/templates/main/admin.html.twig
@@ -72,7 +72,7 @@
 </div>
 <div class="row">  
     <div class="col-12">
-        <a href="#" class="btn btn-primary">Calculer la répartition</a>
+        <a href="{{path('recap', { 'id':group.id })}}" class="btn btn-primary">Calculer la répartition</a>
     </div>
 </div>
 
