--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -13,8 +13,8 @@
 </div>
 <div class="row">
     <div class="col-md-12">
-        <a>
-            <button class="btn btn-primary">Nouveau Budget</button>
+        <a href="{{path('addGroup')}}" class="btn btn-primary">
+            Nouveau Budget
         </a>
         <hr />
         {% if groups %}
